k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: inactive-user-service
spec:
  selector:
    app: inactive-user-archiver
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
  type: NodePort
