k8s/ingress.yml
# 🎯 Permet d'exposer les endpoints de l'API (ex: /api/users) à l'extérieur du cluster
#    via le nom de domaine localhost grâce à l'Ingress Controller NGINX.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inactive-user-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: inactive-user-service
                port:
                  number: 8085
